Fixed several issues for DynamicItems and tables: - Fixed an issue where the buttons in the title bar of a dynamic item were hidden. - Adjusted padding for table cells to save space and align the styling more with that of the current live version of Coder. - Increased the overall font size. - Alternating rows in tables now have a distinct background color. - Fixed the offset of the icon in Excel buttons.

--- a/FrontEnd/Core/Scss/kendo-custom.scss
+++ b/FrontEnd/Core/Scss/kendo-custom.scss
@@ -15,6 +15,10 @@
 /**
  *  Kendo custom styling
  **/
+.k-font-icon {
+    text-indent: 0;
+}
+
 .k-window {
     @include drop-shadow($black-color, 10px, 0.2);
     border-radius: 6px;
@@ -111,7 +115,7 @@
         opacity: 1;
     }
 
-    .k-window-actions {
+    .k-window-actions, .k-window-titlebar-actions {
         height: 43px;
         line-height: 43px;
         right: 16px;
@@ -413,7 +417,7 @@
             content: "\e9b9";
         }
 
-        &.k-i-close:before {
+        &.k-i-x:before {
             content: "\e98d";
         }
 
